# schedule

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  meson.build  meson_options.txt  package-lock.json  package-lock.json.license  package.json  package.json.license
build-aux/: get_release_notes.py  pack.sh
debian/: changelog  control  copyright
res/: screenshot.gif.license
src/: debug.js  extension.js  meson.build  metadata.json.in  metadata.json.in.license  prefs.js  utils.js
src/data/: meson.build  org.gnome.shell.extensions.nightthemeswitcher.gschema.xml  preferences.gresource.xml
src/data/ui/: BackgroundButton.ui  BackgroundsPage.ui  CommandsPage.ui  ContributePage.ui  SchedulePage.ui  ShortcutButton.ui  ThemesPage.ui
src/enums/: Time.js
src/modules/: Switcher.js  SwitcherCommands.js  SwitcherTheme.js  Timer.js
src/po/: LINGUAS  LINGUAS.license  POTFILES  ar.po  bg.po  cs.po  de_DE.po  el.po  es.po  et.po  eu.po  fr.po  gl.po  hu.po  it.po  ja.po  meson.build  nb_NO.po  nightthemeswitcher@romainvigier.fr.pot  nightthemeswitcher@romainvigier.fr.pot.license  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  tr.po  zh_CN.po  zh_TW.po
src/preferences/: BackgroundButton.js  CommandsPage.js  ContributePage.js  SchedulePage.js  ThemesPage.js
tests/: meson.build
website/: favicon.ico.license  index.html  style.css
website/fonts/: Cantarell-Regular.woff2.license
